--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="mbr-text mbr-fonts-style display-7">
-					<strong>2021-05-14</strong> New Canada SSH/SSL & V2Ray Server Added.<br>
+					<strong>2021-05-14</strong> Two New Singapore SSH/SSL Servers Added.<br>
+          <strong>2021-05-14</strong> All SSH/SSL Servers Username & Password Updated.<br>
+          <strong>2021-05-14</strong> New Canada SSH/SSL & V2Ray Server Added.<br>
           <strong>2021-05-14</strong> New Singapore V2Ray Server Added.<br>
-					<strong>2021-05-01</strong> All SSH/SSL Server Updated.<br>
-					<strong>2021-04-26</strong> New United State V2Ray Server Added.<br>
 					<strong>2021-03-17</strong> Join with Us Via Telegram - <a href="https://t.me/mickyssh">MickySSH</a><br>
                                 </p>
                             </div>
@@ -213,6 +213,54 @@
             <div class="col-12 col-md-6 align-center col-lg-4">
                 <div class="plan">
                     <div class="plan-header">
+                        <h6 class="plan-title mbr-fonts-style mb-3 display-4"><strong>SSH/SSL</strong></h6>
+                        <div class="plan-price">
+                            <p class="price mbr-fonts-style m-0 display-5"><strong>Singapore
+</strong></p>
+                            <p class="price-term mbr-fonts-style mb-3 display-7"></p>
+                        </div>
+                    </div>
+                    <div class="plan-body">
+                        <div class="plan-list mb-4">
+                            <ul class="list-group mbr-fonts-style list-group-flush display-7">
+                                <li class="list-group-item"><strong>IP</strong>: 139.59.250.111</li><li class="list-group-item"><strong>SSH</strong>: 22
+</li><li class="list-group-item"><strong>Dropbear</strong>: 80
+</li><li class="list-group-item"><strong>SSL</strong>: 443
+</li><li class="list-group-item"><strong>Squid</strong>: 3128
+</li><li class="list-group-item"><strong>udpgw</strong>: 7300</li>
+                            </ul>
+                        </div>
+                        <div class="mbr-section-btn text-center"><a href="javascript:OpenModal('SG-MODEL')" class="btn btn-primary display-4">Get started</a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 align-center col-lg-4">
+                <div class="plan">
+                    <div class="plan-header">
+                        <h6 class="plan-title mbr-fonts-style mb-3 display-4"><strong>SSH/SSL</strong></h6>
+                        <div class="plan-price">
+                            <p class="price mbr-fonts-style m-0 display-5"><strong>Singapore
+</strong></p>
+                            <p class="price-term mbr-fonts-style mb-3 display-7"></p>
+                        </div>
+                    </div>
+                    <div class="plan-body">
+                        <div class="plan-list mb-4">
+                            <ul class="list-group mbr-fonts-style list-group-flush display-7">
+                                <li class="list-group-item"><strong>IP</strong>: 128.199.124.69</li><li class="list-group-item"><strong>SSH</strong>: 22
+</li><li class="list-group-item"><strong>Dropbear</strong>: 80
+</li><li class="list-group-item"><strong>SSL</strong>: 443
+</li><li class="list-group-item"><strong>Squid</strong>: 3128
+</li><li class="list-group-item"><strong>udpgw</strong>: 7300</li>
+                            </ul>
+                        </div>
+                        <div class="mbr-section-btn text-center"><a href="javascript:OpenModal('SG-MODEL')" class="btn btn-primary display-4">Get started</a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 align-center col-lg-4">
+                <div class="plan">
+                    <div class="plan-header">
                         <h6 class="plan-title mbr-fonts-style mb-3 display-4">
                             <strong>SSH/SSL</strong>
                         </h6>
@@ -259,10 +307,10 @@
 	<div><div class="modal fade" id="SG-MODEL" tabindex="-1" role="dialog" aria-labelledby="SG-MODELLabel" aria-hidden="true">  <div class="modal-dialog  " style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="SG-MODELLabel">Singapore Server</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="SG-MODEL_body"><div style="text-align: center">
  <br>
   	<h4>
-      <strong>Username</strong>: &nbsp;&nbsp;itather <br>
+      <strong>Username</strong>: &nbsp;&nbsp;autive <br>
   </h4>
 	<h4>
-      <strong>Password</strong>: &nbsp;&nbsp;itather
+      <strong>Password</strong>: &nbsp;&nbsp;autive
   </h4><br>
 </div>
 <br>		
@@ -325,10 +373,10 @@
 	<div><div class="modal fade" id="US-MODEL" tabindex="-1" role="dialog" aria-labelledby="US-MODELLabel" aria-hidden="true">  <div class="modal-dialog  " style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="US-MODELLabel">United States Sever</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="US-MODEL_body"><div style="text-align: center">
  <br>
   	<h4>
-      <strong>Username</strong>: &nbsp;&nbsp;chifully<br>
+      <strong>Username</strong>: &nbsp;&nbsp;strects<br>
   </h4>
 	<h4>
-      <strong>Password</strong>: &nbsp;&nbsp;chifully
+      <strong>Password</strong>: &nbsp;&nbsp;strects
   </h4><br>
 </div>
 <br>
@@ -390,10 +438,10 @@
 	<div><div class="modal fade" id="AZ-MODEL" tabindex="-1" role="dialog" aria-labelledby="AZ-MODELLabel" aria-hidden="true">  <div class="modal-dialog  " style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="AZ-MODELLabel">Australia Server</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="AZ-MODEL_body"><div style="text-align: center">
  <br>
   	<h4>
-      <strong>Username</strong>: &nbsp;&nbsp;beseled<br>
+      <strong>Username</strong>: &nbsp;&nbsp;slimpers<br>
   </h4>
 	<h4>
-      <strong>Password</strong>: &nbsp;&nbsp;beseled
+      <strong>Password</strong>: &nbsp;&nbsp;slimpers
   </h4><br>
 </div>
 <br>
@@ -455,10 +503,10 @@
 	<div><div class="modal fade" id="IN-MODEL" tabindex="-1" role="dialog" aria-labelledby="IN-MODELLabel" aria-hidden="true">  <div class="modal-dialog  " style="height:auto" role="document">    <div class="modal-content"><div class="modal-header">  <h5 class="no-anim modal-title" id="IN-MODELLabel">Indian Server</h5>  <a href="#" class="no-anim close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></a></div><div class="modal-body" id="IN-MODEL_body"><div style="text-align: center">
  <br>
   	<h4>
-      <strong>Username</strong>: &nbsp;&nbsp;chinte<br>
+      <strong>Username</strong>: &nbsp;&nbsp;veytoy<br>
   </h4>
 	<h4>
-      <strong>Password</strong>: &nbsp;&nbsp;chinte
+      <strong>Password</strong>: &nbsp;&nbsp;veytoy
   </h4><br>
 </div>
 <br>
